# dfx-json-inspector

./: Cargo.toml  README.md
src/: main.rs
