[package]
name = "dfx-json-inspector"
version = "0.1.1"
edition = "2021"
authors = ["vishnu"]
license = "MIT/Apache-2.0"
description = "A command-line tool for analyzing dfx.json files in Internet Computer projects"
rust-version = "1.70"
keywords = ["dfx", "internet-computer", "canister", "icp", "cli"]
categories = ["command-line-utilities", "development-tools"]

[doc]
browser = "/home/vishnulinux/ic-projects/dfx-json-inspector/target/doc/dfx_json_inspector/index.html"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"